--- a/kathryn/bulk_data/finemapping/ldlink_1_gene/ldlink_acbd6.Rmd
+++ b/kathryn/bulk_data/finemapping/ldlink_1_gene/ldlink_acbd6.Rmd
@@ -15,10 +15,10 @@ Todo:
 #source("https://bioconductor.org/biocLite.R")
 #biocLite("snpStats") # https://www.bioconductor.org/packages//2.10/bioc/html/snpStats.html
 
-library(snpStats)
-library(BiocManager)
-library(biomaRt)
-library(snpEnrichment) # https://rdrr.io/cran/snpEnrichment/man/writeLD.html
+# library(snpStats)
+# library(BiocManager)
+# library(biomaRt)
+# library(snpEnrichment) # https://rdrr.io/cran/snpEnrichment/man/writeLD.html
 
 ```
 
@@ -31,12 +31,13 @@ chr1_cis_split <- split(chr1_cis, chr1_cis$GeneSymbol)
 ACBD6 <- chr1_cis_split[[11]] # ACBD6
 ```
 
+# FOR PLINK FILES
+
 ```{r create_snp_file_1_gene_locus}
 
 fwrite(data.table(ACBD6$SNP), "/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/acbd6_snps.txt", row.names=F, col.names=F)
 
 ```
-
 
 ```{r make_map_1_gene_locus}
 
@@ -54,7 +55,7 @@ Have to make up information for summary stats:
      Phenotype
 http://cubre.covenantuniversity.edu.ng/wp-content/uploads/2014/07/H3ABionet_2014_GWAS_2_Plink_Data_Format.pdf
 
-```{r make_ped_1_gene_locus}
+```{r make_ped_1_gene_locus, include=F}
 
 ACBD6_table <- data.table(ACBD6$SNP, ACBD6$OtherAllele, ACBD6$AssessedAllele)
 colnames(ACBD6_table) <- c("SNP", "Ref", "Alt")
@@ -118,6 +119,8 @@ https://www.biostars.org/p/274562/
 
 https://www.bioconductor.org/packages//2.10/bioc/manuals/snpStats/man/snpStats.pdf
 
+# SNPSTATS
+
 ```{r snpStats, include=F}
 
 data(testdata)
@@ -126,3 +129,34 @@ ld2 <- ld(Autosomes[, 1:50], depth=9, stats=c("D.prime", "R.squared"))
 ld3 <- ld(Autosomes[, 1:20], Autosomes[, 21:25], stats="R.squared") 
 
 ```
+
+# PROXYSNPS
+
+```{r proxysnps, include=F}
+
+d <- get_proxies(chrom = "1", pos = 180448558, window_size = 665391, pop = "AFR")
+
+```
+
+# LDMATRIX
+
+```{r ldmatrix_false, include=F}
+fwrite(data.table(glue_collapse(ACBD6$SNP, sep="\\n")), "acbd6_snps_collapsed.txt")
+
+system('curl -k -H "Content-Type: application/json" -X POST -d "{"snps": "acbd6_snps_collapsed.txt", "pop": "CEU","r2_d": "r2"}" "https://ldlink.nci.nih.gov/LDlinkRest/ldmatrix?&token=bc2543d7f1e5" > "/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/abcd6_ld_main_ceu.txt"')
+
+
+```
+
+```{r ldmatrix}
+
+ldin <- glue_collapse(ACBD6$SNP, sep="\\n")
+# sysin <-gsub('\"', "", paste('curl -k -H "Content-Type: application/json" -X POST -d "{"snps": "finemapping', ldin,'", "pop": "CEU","r2_d": "r2"}" "https://ldlink.nci.nih.gov/LDlinkRest/ldmatrix?&token=bc2543d7f1e5" > "/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/abcd6_ld_main_ceu.txt"', sep=""), str, fixed=TRUE)
+
+# sysin <- gsub("\\n", "\n", gsub('\\\'', "\"", paste("curl -k -H 'Content-Type: application/json' -X POST -d '{", "\"snps\"", ": \"", ldin, "\", \"pop\": \"CEU\",\"r2_d\": \"r2\"}\" 'https://ldlink.nci.nih.gov/LDlinkRest/ldmatrix?&token=bc2543d7f1e5' > '/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/abcd6_ld_main_ceu.txt'", sep=""), str, fixed=T), str, fixed=T)
+
+system(print(gsub("\\n", "\n", gsub('\\\'', "\'", paste('curl -k -H "Content-Type: application/json" -X POST -d \'{', '"snps"', ": \"", ldin, '", "pop": "CEU","r2_d": "r2"}\'', " 'https://ldlink.nci.nih.gov/LDlinkRest/ldmatrix?&token=bc2543d7f1e5' > '/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/finemapping/abcd6_ld_main_ceu.txt'", sep=""), str, fixed=T), str, fixed=T), quote=F))
+
+
+```
+
